# AlphabetMLP

./: .gitignore  LICENSE  README.md
materials/: instructions_for_testing.md  instructions_for_testing_rus.md  perceptron.md  perceptron_rus.md
src/: CMakeLists.txt  Makefile  main.cc
src/controller/: controller.cc  controller.h
src/docs/: Doxyfile
src/model/: CMakeLists.txt  model.cc  model.h
src/model/networks/base/: CMakeLists.txt  base_network.cc  base_network.h
src/model/networks/graph/: CMakeLists.txt  graph_network.cc  graph_network.h
src/model/networks/matrix/: CMakeLists.txt  matrix_network.cc  matrix_network.h
src/model/reader/: CMakeLists.txt  reader_emnist.cc  reader_emnist.h
src/qclass/graph_mse/: graph_mse_window.cc  graph_mse_window.h  graph_mse_window.ui
src/qclass/letter_plot/: letters_plot.cc  letters_plot.h
src/qclass/main_window/: main_window.cc  main_window.h  main_window.ui
src/qclass/settings/: settings.cc  settings.h  settings.ui
src/tests/: CMakeLists.txt  forward_feed.cc  learn.cc  load_weight.cc  reader.cc  save_weight.cc  test.cc  test.h
src/tests/sample/: train_for_test.csv  weight_after_learn.net  weight_for_test.net
task/: README.md  README_RUS.md
